--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dev = [
     "pytest-asyncio>=0.23.0",
     "pytest-cov>=5.0.0",
     "black>=24.0.0",
+    "pyright>=1.1.0",
 ]
 
 [project.urls]
@@ -57,8 +58,22 @@ line-length = 120
 target-version = "py311"
 
 [tool.ruff.lint]
-select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
-ignore = ["B008", "C901", "E501"]
+select = [
+    "E",      # pycodestyle errors (语法错误)
+    "W",      # pycodestyle warnings
+    "F",      # pyflakes (未使用的导入/变量)
+    "I",      # isort (导入排序)
+    "B",      # flake8-bugbear
+    "C4",     # flake8-comprehensions
+    "UP",     # pyupgrade (现代语法)
+    "SIM",    # flake8-simplify
+    "T20",    # flake8-print (print 语句)
+]
+ignore = [
+    "B008",   # do not perform function calls in argument defaults
+    "C901",   # too complex
+    "E501",   # line too long (handled by black)
+]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
@@ -71,3 +86,7 @@ addopts = "-v --tb=short"
 [tool.black]
 line-length = 120
 target-version = ["py311"]
+
+[tool.pyright]
+pythonVersion = "3.11"
+typeCheckingMode = "basic"
