--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pyright
+          pip install git+https://github.com/NekroAI/nekro-agent.git
 
       - name: Run pyright
         run: |
@@ -74,6 +75,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pydantic
+          pip install git+https://github.com/NekroAI/nekro-agent.git
 
       - name: Test import
         run: |
